# mini-cloud-service-platform

./: .gitignore  README.md  pyproject.toml  test_lambda.py
backend/: pom.xml
backend/src/main/java/com/example/lambda/: FunctionStorage.java  LambdaController.java  LambdaFunction.java  LambdaService.java
examples/: hello.py
frontend/: package-lock.json  package.json
frontend/src/pages/: LambdaPage.js
frontend/src/services/: api.js
lima/: lambda.yaml
src/: __init__.py
src/ec2_service/: __init__.py  aws_ec2.py  config.py  lima_vm.py  main.py  models.py  proxmox.py
src/lambda_service/: __init__.py  config.py  main.py  runtime.py
